# SoftRoce

./: .gitignore  README.md
rdma_client_server/: CMakeCache.txt  CMakeLists.txt  Makefile
rdma_client_server/src/: rdma_client_frame.c  rdma_common.c  rdma_common.h  rdma_server_frame.c
udp_receiver/: CMakeCache.txt  CMakeLists.txt  Makefile  log.txt
udp_receiver/src/: crc32.c  crc32.h  crc_check  crc_check.c  ib.h  log.txt  net_utils.c  net_utils.h  opcode.h  ref_packets.h  udp_client.c  udp_server.c  udpserver_unit.c
udp_receiver/wireshark/: FirstSuccesfullRping.pcapng  Frame_req_and_response.pcapng  Frame_req_and_response_5000_bytes.pcapng  Frame_req_and_response_htons_bytes.pcapng  RoCE_capture_10_packets.pcapng  RoCE_capture_1_packet (1).pcapng  Roce_PacketSize_1400.pcapng  Roce_PacketSize_2400_stall.pcapng  Roce_PacketSize_5000_bytes.pcapng  capture_S10000_C1.pcapng  rping 3072_faillire.pcapng
